examples/test/testpolicy4744.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4744
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key19: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value34
          key0: value7
          key37: value45
      podSelector:
        matchLabels:
          key42: value39
          key20: value29
          key25: value24
